--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,17 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-flask = "*"
-flask-cors = "*"
-python-dotenv = "*"
-flask-sqlalchemy = "*"
+python-dotenv = "==0.14.0"
+click = "==7.1.2"
+itsdangerous = "==1.1.0"
+six = "==1.15.0"
+Flask = "==1.1.2"
+Flask-Cors = "==3.0.9"
+Flask-SQLAlchemy = "==2.4.4"
+Jinja2 = "==2.11.2"
+MarkupSafe = "==1.1.1"
+SQLAlchemy = "==1.3.19"
+Werkzeug = "==1.0.1"
 
 [requires]
 python_version = "3.8"
